myservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice-lb
  labels:
    app: myservice
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: myservice
